--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         }
       })();
     </script>
-    <!-- Loading spinner animation -->
+    <!-- Loading spinner animation + hide default BMC widget button -->
     <style>
       @keyframes spin {
         to { transform: rotate(360deg); }
       }
+      #bmc-wbtn { display: none !important; }
     </style>
-    <!-- Buy Me a Coffee Widget - Bottom Left -->
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" 
-    data-id="Wednesdaywoe" data-description="Support me on Buy me a coffee!" data-message="I'm fueled by espresso, thank you
-    for enabling me" data-color="#BD5FFF" data-position="left" data-x_margin="18" data-y_margin="18">
-    </script>
+    <!-- Buy Me a Coffee Widget (hidden button, modal only) -->
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+    data-id="Wednesdaywoe" data-description="Support me on Buy me a coffee!" data-message="I'm fueled by espresso, thank you for enabling me"
+    data-color="#BD5FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
   </head>
   <body>
     <div id="brand-banner" style="background: linear-gradient(135deg, #1a1a2e, #16213e); color: white; padding: 0; text-align: center; border-bottom: 2px solid #0f3460; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); height: 60px;">
