feat: Add Titan, Hydra, and D-Sync enhancements; update IO sets to enable proc effects
- Introduced new enhancement categories: Titan, Hydra, and D-Sync.
- Updated IO sets to enable proc effects for various enhancements.
- Added new resistance proc for Psionic and Mez in the proc database.
- Enhanced tracker with new controls modal for quick reference of desktop and mobile interactions.
- Updated UI store to manage the state of the new controls modal.
- Refactored enhancement types to support multiple aspects with individual values.
- Improved calculations for character totals to include new buffs for regeneration and recovery.
- Added new image asset for Unbreakable Guard enhancement.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           border-radius: 50%;
           animation: spin 1s linear infinite;
         "></div>
-        <p style="margin-top: 16px; font-size: 14px;">Loading City of Heroes Planner...</p>
+        <p style="margin-top: 16px; font-size: 14px;">Loading Sidekick - City of Heroes Character Planner</p>
       </div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
