feat: Enhance HTML metadata for improved SEO and social sharing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <link rel="apple-touch-icon" sizes="256x256" href="img/favicon-256x256.png" />
     <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>City of Heroes Planner</title>
+    <meta name="description" content="Sidekick is a free City of Heroes build planner. Plan powers, enhancements, IO sets, incarnates, and view detailed stats for your hero or villain builds." />
+    <meta name="keywords" content="City of Heroes, CoH, build planner, character planner, IO sets, incarnate, enhancements, hero builder, villain builder, Homecoming" />
+    <meta name="author" content="Wednesdaywoe" />
+    <!-- Open Graph / Social sharing -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Sidekick - City of Heroes Build Planner" />
+    <meta property="og:description" content="Plan your City of Heroes builds with powers, enhancements, IO sets, incarnates, and detailed stat breakdowns." />
+    <meta property="og:url" content="https://coh-sidekick.com" />
+    <meta property="og:site_name" content="Sidekick" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Sidekick - City of Heroes Build Planner" />
+    <meta name="twitter:description" content="Plan your City of Heroes builds with powers, enhancements, IO sets, incarnates, and detailed stat breakdowns." />
+    <link rel="canonical" href="https://coh-sidekick.com" />
+    <title>Sidekick - City of Heroes Build Planner</title>
     <!-- SPA redirect handler for GitHub Pages -->
     <script>
       (function() {
