fix: Update 404 redirect to point to root instead of CoH-Planner path

--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
       // Single Page App redirect for GitHub Pages
       // Redirects all 404s to index.html with the path preserved in sessionStorage
       sessionStorage.redirect = location.href;
-      location.replace('/CoH-Planner/');
+      location.replace('/');
     </script>
   </head>
   <body></body>
