fix: Update icon paths in index.html to use absolute URLs and enhance Modal component to prevent closing on drag

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="img/favicon-64x64.png" />
-    <link rel="apple-touch-icon" sizes="256x256" href="img/favicon-256x256.png" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/img/favicon-64x64.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="/img/favicon-256x256.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Sidekick is a free City of Heroes build planner. Plan powers, enhancements, IO sets, incarnates, and view detailed stats for your hero or villain builds." />
     <meta name="keywords" content="City of Heroes, CoH, build planner, character planner, IO sets, incarnate, enhancements, hero builder, villain builder, Homecoming" />
@@ -47,7 +47,7 @@
   </head>
   <body>
     <div id="brand-banner" style="background: linear-gradient(135deg, #1a1a2e, #16213e); color: white; padding: 0; text-align: center; border-bottom: 2px solid #0f3460; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); height: 60px;">
-      <img src="img/sidekick-banner.svg" alt="Sidekick Banner" style="display: block; margin: 0 auto; max-width: 100%; height: 60px;" />
+      <img src="/img/sidekick-banner.svg" alt="Sidekick Banner" style="display: block; margin: 0 auto; max-width: 100%; height: 60px;" />
     </div>
     <div id="root">
       <!-- Static landing page — crawled by search engines, replaced when React mounts -->
